# affirmations

./: Cargo.toml  README.md  dist-workspace.toml
src/: affirmations.rs  main.rs
