[package]
name = "affirmations"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kloki/affirmations"

[dependencies]
colorize = "0.1.0"
rand = "0.9.2"
sysinfo = "0.38.1"
whoami = "2.1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
